Add openemu shaders submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "External/ZIPFoundation"]
 	path = External/ZIPFoundation
 	url = https://github.com/rileytestut/ZIPFoundation.git
+[submodule "External/OpenEmu-Shaders"]
+	path = External/OpenEmu-Shaders
+	url = https://github.com/LitRitt/OpenEmu-Shaders.git
